--- a/evichbook.html
+++ b/evichbook.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Книга 20 вариантов | ОГЭ 2023 информатика</title>
+  <title>Книга | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Людмила Николаевна Евич"><meta name="author" content="andygram">-->
+<meta name="description" content="Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года."><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,14 +20,26 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./evichbook.html">Книга 20 вариантов</a></h2>
+<h2><a href="./evichbook.html">Книга</a></h2>
 <h5><i class="icon-feather"></i> Thu 15 September 2022
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/book.html">book</a> / </span>
 </h5>
 
-<p><img alt="pic" src="./images/evich2021-book-cover.png"></p>
+<p>Пособие адресовано учащимся 9-х классов, а также учителям, которые организуют процесс подготовки к экзамену.  </p>
+<h3>Книга содержит:</h3>
+<ul>
+<li>20 новых тренировочных вариантов, составленных по проектам спецификации и демоверсии ОГЭ 2021 года;</li>
+<li>подробное решение первой части одного варианта;</li>
+<li>развёрнутые ответы к заданиям 14, 15 и 16 всех вариантов;</li>
+<li>ответы ко всем заданиям.</li>
+</ul>
+<p>Электронные таблицы к заданию 14, а также необходимые файлы и папки к заданиям 11, 12, 13.1 и 13.2 находятся на сайте издательства в разделе «Электронные приложения» (www.legionr.ru) в свободном доступе.</p>
+<p><a href="./images/Evich_OGE-2021.pdf">PDF</a></p>
+<p><img alt="pic" src="./images/evich2021-book-cover.png">
+<img alt="pic" src="./images/evich2021-book-intro.png">
+<img alt="pic" src="./images/evich2021-book-content.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
