--- a/meeting.html
+++ b/meeting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Знакомство и договор | ОГЭ 2023 информатика</title>
+  <title>Договор | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
 <meta name="description" content="Знакомство с родителями и договор"><meta name="author" content="andygram">-->
@@ -20,27 +20,25 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./meeting.html">Знакомство и договор</a></h2>
+<h2><a href="./meeting.html">Договор</a></h2>
 <h5><i class="icon-feather"></i> Sun 11 September 2022
 <i class="icon-bookmarks"></i>
-<span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/log.html">log</a> / </span>
 </h5>
 
-<h2>Цель занятий</h2>
+<h3>Цель занятий</h3>
 <ul>
 <li>подготовка к ОГЭ по информатике</li>
 </ul>
-<h2>Материал</h2>
+<h3>Материал</h3>
 <ul>
 <li>тренировочные варианты 2021 года</li>
 </ul>
-<h2>Расписание</h2>
+<h3>Расписание</h3>
 <ul>
 <li>один двухчасовой урок в неделю</li>
 </ul>
-<p><img alt="pic" src="./images/2022-09-12_Skype.png">
-<img alt="pic" src="./images/2022-09-08-Calls.png"></p>
+<p><img alt="pic" src="./images/2022-09-12_Skype.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
