--- a/fipi.html
+++ b/fipi.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Пояснения к ОГЭ от ФИПИ | ОГЭ 2023 информатика</title>
+  <title>Ф И П И | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Федеральный институт педагогических измерений"><meta name="author" content="andygram">-->
+<meta name="description" content="Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года."><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,7 +20,7 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./fipi.html">Пояснения к ОГЭ от ФИПИ</a></h2>
+<h2><a href="./fipi.html">Ф И П И</a></h2>
 <h5><i class="icon-feather"></i> Mon 12 September 2022
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
