--- a/lesson-01.html
+++ b/lesson-01.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Урок 1 - Задание 13 | ОГЭ 2023 информатика</title>
+  <title>Урок 1 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Разбор заданий 13.1 и 13.2 из варианта 1"><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста) из варианта 1"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,19 +20,13 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-01.html">Урок 1 - Задание 13</a></h2>
+<h2><a href="./lesson-01.html">Урок 1</a></h2>
 <h5><i class="icon-feather"></i> Wed 21 September 2022
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h1>Задание 13.1</h1>
-<p><img alt="pic" src="./images/evich2021-V01-Z13-1_a.png">
-<img alt="pic" src="./images/evich2021-V01-Z13-1_b.png"></p>
-<h2>Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года</h2>
-<p><img alt="pic" src="./images/oge-2023-kriter13-1_a.png">
-<img alt="pic" src="./images/oge-2023-kriter13-1_b.png"></p>
 <h1>Задание 13.2</h1>
 <p><img alt="pic" src="./images/evich2021-V01-Z13-2_a.png">
 <img alt="pic" src="./images/evich2021-V01-Z13-2_b.png"></p>
@@ -40,6 +34,12 @@
 <p><img alt="pic" src="./images/oge-2023-kriter13-2_a.png">
 <img alt="pic" src="./images/oge-2023-kriter13-2_b.png">
 <img alt="pic" src="./images/oge-2023-kriter13-2_c.png"></p>
+<h1>Задание 13.1</h1>
+<p><img alt="pic" src="./images/evich2021-V01-Z13-1_a.png">
+<img alt="pic" src="./images/evich2021-V01-Z13-1_b.png"></p>
+<h2>Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года</h2>
+<p><img alt="pic" src="./images/oge-2023-kriter13-1_a.png">
+<img alt="pic" src="./images/oge-2023-kriter13-1_b.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
