--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="../pages/contact.html">Contact</a></h2>
-<p>If you want to contact about typos, grammar and other errors in this blog, you can open an issue <a href="https://github.com/alexandrevicenzi/Flex/issues">here</a>.</p>
+<p>If you want to contact about typos, grammar and other errors in this blog, you can open an issue <a href="https://github.com/neymash12">here</a>.</p>
 
     </div>
 </div>
