--- a/fipi.html
+++ b/fipi.html
@@ -30,7 +30,8 @@
 <h1>Основной государственный экзамен по ИНФОРМАТИКЕ</h1>
 <h2>Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года</h2>
 <p><img alt="pic" src="./images/oge-2023-plan.png">
-<img alt="pic" src="./images/oge-2023-spec.png"></p>
+<img alt="pic" src="./images/oge-2023-spec.png">
+<img alt="pic" src="./images/oge-2023-mark.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
