--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>    <div id="main">
 <h2><a href="./lesson-02.html">Урок 2</a></h2>
 <h5><i class="icon-feather"></i> Wed 28 September 2022 </h5>
-Разбор домашнего задания (13.2 вариант 2)
+Разбор задания 10 из вариантов 1-3 (Системы счисления); Разбор домашнего задания (13.2 вариант 2)
 <h2><a href="./lesson-01.html">Урок 1</a></h2>
 <h5><i class="icon-feather"></i> Wed 21 September 2022 </h5>
 Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста) из варианта 1
