--- a/lesson-02.html
+++ b/lesson-02.html
@@ -4,7 +4,7 @@
   <title>Урок 2 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Разбор домашнего задания (13.2 вариант 2)"><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор задания 10 из вариантов 1-3 (Системы счисления); Разбор домашнего задания (13.2 вариант 2)"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -27,6 +27,9 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
+<h1>Варианты 1-3, Задание 10</h1>
+<p><img alt="pic" src="./images/evich2021-V01-03-Z10.png"></p>
+<hr>
 <h1>Вариант 2, Задание 13.2</h1>
 <p><img alt="pic" src="./images/evich2021-V02-Z13-2_a.png">
 <img alt="pic" src="./images/evich2021-V02-Z13-2_b.png"></p>
