--- a/lesson-02.html
+++ b/lesson-02.html
@@ -27,6 +27,8 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
+<h1>Системы счисления</h1>
+<p><img alt="pic" src="./images/lesson-02_01.png"></p>
 <h1>Варианты 1-3, Задание 10</h1>
 <p><img alt="pic" src="./images/evich2021-V01-03-Z10.png"></p>
 <hr>
