--- a/lesson-02.html
+++ b/lesson-02.html
@@ -31,6 +31,8 @@
 <p><img alt="pic" src="./images/lesson-02_01.png"></p>
 <h1>Варианты 1-3, Задание 10</h1>
 <p><img alt="pic" src="./images/evich2021-V01-03-Z10.png"></p>
+<h2>Домашнее задание</h2>
+<p><img alt="pic" src="./images/lesson-02_02.png"></p>
 <hr>
 <h1>Вариант 2, Задание 13.2</h1>
 <p><img alt="pic" src="./images/evich2021-V02-Z13-2_a.png">
