--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-03.html">Урок 3</a></h2>
+<h5><i class="icon-feather"></i> Tue 04 October 2022 </h5>
+Разбор задания 9 из вариантов 1-3 (Схема дорог);
 <h2><a href="./lesson-02.html">Урок 2</a></h2>
-<h5><i class="icon-feather"></i> Wed 28 September 2022 </h5>
+<h5><i class="icon-feather"></i> Tue 27 September 2022 </h5>
 Разбор задания 10 из вариантов 1-3 (Системы счисления); Разбор домашнего задания (13.2 вариант 2)
 <h2><a href="./lesson-01.html">Урок 1</a></h2>
-<h5><i class="icon-feather"></i> Wed 21 September 2022 </h5>
+<h5><i class="icon-feather"></i> Tue 20 September 2022 </h5>
 Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста) из варианта 1
 <h2><a href="./evichansw.html">Ответы</a></h2>
 <h5><i class="icon-feather"></i> Fri 16 September 2022 </h5>
@@ -32,9 +35,6 @@
 <h2><a href="./evichbook.html">Книга</a></h2>
 <h5><i class="icon-feather"></i> Thu 15 September 2022 </h5>
 Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
-<h2><a href="./fipi.html">Ф И П И</a></h2>
-<h5><i class="icon-feather"></i> Mon 12 September 2022 </h5>
-Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
 <div class="pagination">
     page 1 of 2.
         <a href="./index2.html">Next&rarr;</a>
