--- a/lesson-02.html
+++ b/lesson-02.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./lesson-02.html">Урок 2</a></h2>
-<h5><i class="icon-feather"></i> Wed 28 September 2022
+<h5><i class="icon-feather"></i> Tue 27 September 2022
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
@@ -32,7 +32,7 @@
 <h1>Варианты 1-3, Задание 10</h1>
 <p><img alt="pic" src="./images/evich2021-V01-03-Z10.png"></p>
 <h2>Домашнее задание</h2>
-<p><img alt="pic" src="./images/lesson-02_02.png"></p>
+<p><img alt="pic" src="./images/evich2021-Z10_answers.png"></p>
 <hr>
 <h1>Вариант 2, Задание 13.2</h1>
 <p><img alt="pic" src="./images/evich2021-V02-Z13-2_a.png">
