--- a/lesson-03.html
+++ b/lesson-03.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика</title>
+  <title>Урок 3 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор задания 9 из вариантов 1-3 (Схема дорог);"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,16 +20,27 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./fipi.html">Ф И П И</a></h2>
-<h5><i class="icon-feather"></i> Mon 12 September 2022 </h5>
-Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
-<h2><a href="./meeting.html">Договор</a></h2>
-<h5><i class="icon-feather"></i> Sun 11 September 2022 </h5>
-Знакомство с родителями и договор
-<div class="pagination">
-        <a href="./index.html">&larr;Prev</a>
-    page 2 of 2.
-</div>    </div>
+<h2><a href="./lesson-03.html">Урок 3</a></h2>
+<h5><i class="icon-feather"></i> Tue 04 October 2022
+<i class="icon-bookmarks"></i>
+<span><a href="./tag/oge.html">oge</a> / </span>
+<span><a href="./tag/lesson.html">lesson</a> / </span>
+</h5>
+
+<h1>Схема дорог</h1>
+<p><img alt="pic" src="./images/evich2021-V01-Z09_task.png"></p>
+<h2>Решение перебором</h2>
+<p><img alt="pic" src="./images/evich2021-V01-Z09_perebor.png"></p>
+<h2>Решение исключением</h2>
+<p><img alt="pic" src="./images/evich2021-V01-Z09_exclusion.png"></p>
+<h2>Ответы к заданиям 9</h2>
+<p><img alt="pic" src="./images/evich2021-Z09_answers.png"></p>
+<hr>
+<h2>Домашнее задание</h2>
+<p><img alt="pic" src="./images/evich2021-V01-02-Z09.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
