--- a/lesson-03.html
+++ b/lesson-03.html
@@ -27,17 +27,19 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h1>Схема дорог</h1>
+<h2>Схема дорог</h2>
 <p><img alt="pic" src="./images/evich2021-V01-Z09_task.png"></p>
-<h2>Решение перебором</h2>
+<h3>Решение перебором</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z09_perebor.png"></p>
-<h2>Решение исключением</h2>
+<h3>Решение исключением</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z09_exclusion.png"></p>
-<h2>Ответы к заданиям 9</h2>
-<p><img alt="pic" src="./images/evich2021-Z09_answers.png"></p>
+<h3>Решение подсчётом</h3>
+<p><img alt="pic" src="./images/evich2021-V01-Z09_solution.png"></p>
 <hr>
-<h2>Домашнее задание</h2>
+<h3>Домашнее задание</h3>
 <p><img alt="pic" src="./images/evich2021-V01-02-Z09.png"></p>
+<h3>Ответы к заданиям 9</h3>
+<p><img alt="pic" src="./images/evich2021-Z09_answers.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
