--- a/lesson-03.html
+++ b/lesson-03.html
@@ -40,6 +40,8 @@
 <p><img alt="pic" src="./images/evich2021-V01-02-Z09.png"></p>
 <h3>Ответы к заданиям 9</h3>
 <p><img alt="pic" src="./images/evich2021-Z09_answers.png"></p>
+<h2>Е Г Э  Задание 13</h2>
+<p><img alt="pic" src="./images/ege-2022-task13_1.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
