--- a/index2.html
+++ b/index2.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./evichbook.html">Книга</a></h2>
+<h5><i class="icon-feather"></i> Thu 15 September 2022 </h5>
+Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
 <h2><a href="./fipi.html">Ф И П И</a></h2>
 <h5><i class="icon-feather"></i> Mon 12 September 2022 </h5>
 Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
