--- a/drafts/lesson-05.html
+++ b/drafts/lesson-05.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика - ОГЭ category</title>
+  <title>Урок 5 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор задания 7 (Интернет-адрес) из вариантов 1-3; + Контрольная работа"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="../theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,19 +20,26 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="../evichbook.html">Книга</a></h2>
-<h5><i class="icon-feather"></i> Thu 15 September 2022 </h5>
-Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
-<h2><a href="../fipi.html">Ф И П И</a></h2>
-<h5><i class="icon-feather"></i> Mon 12 September 2022 </h5>
-Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
-<h2><a href="../meeting.html">Договор</a></h2>
-<h5><i class="icon-feather"></i> Sun 11 September 2022 </h5>
-Знакомство с родителями и договор
-<div class="pagination">
-        <a href="../category/oge.html">&larr;Prev</a>
-    page 2 of 2.
-</div>    </div>
+<h2><a href="../drafts/lesson-05.html">Урок 5</a></h2>
+<h5><i class="icon-feather"></i> Tue 18 October 2022
+<i class="icon-bookmarks"></i>
+<span><a href="../tag/oge.html">oge</a> / </span>
+<span><a href="../tag/lesson.html">lesson</a> / </span>
+</h5>
+
+<h2>Интернет-адрес</h2>
+<p><img alt="pic" src="./images/evich2021-V01-Z07_task.png"></p>
+<h2>Решение</h2>
+<p><img alt="pic" src="./images/evich2021-V01-Z07_solution.png"></p>
+<h3>Вариант 2</h3>
+<p><img alt="pic" src="./images/evich2021-V02-Z07_task.png"></p>
+<h3>Вариант 3</h3>
+<p><img alt="pic" src="./images/evich2021-V03-Z07_task.png"></p>
+<h2>Ответы к заданиям 7</h2>
+<p><img alt="pic" src="./images/evich2021-Z07_answers.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
