--- a/lesson-04.html
+++ b/lesson-04.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Урок 2 | ОГЭ 2023 информатика</title>
+  <title>Урок 4 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Разбор задания 10 (Системы счисления) из вариантов 1-3; Разбор домашнего задания (13.2 вариант 2)"><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор задания 8 (Поисковый запрос) из вариантов 1-3"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,27 +20,27 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-02.html">Урок 2</a></h2>
-<h5><i class="icon-feather"></i> Tue 27 September 2022
+<h2><a href="./lesson-04.html">Урок 4</a></h2>
+<h5><i class="icon-feather"></i> Tue 11 October 2022
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h1>Системы счисления</h1>
-<p><img alt="pic" src="./images/lesson-02_01.png"></p>
-<h1>Варианты 1-3, Задание 10</h1>
-<p><img alt="pic" src="./images/evich2021-V01-03-Z10.png"></p>
-<h2>Домашнее задание</h2>
-<p><img alt="pic" src="./images/evich2021-Z10_answers.png"></p>
-<hr>
-<h1>Вариант 2, Задание 13.2</h1>
-<p><img alt="pic" src="./images/evich2021-V02-Z13-2_a.png">
-<img alt="pic" src="./images/evich2021-V02-Z13-2_b.png"></p>
-<h2>Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года</h2>
-<p><img alt="pic" src="./images/oge-2023-kriter13-2_a.png">
-<img alt="pic" src="./images/oge-2023-kriter13-2_b.png">
-<img alt="pic" src="./images/oge-2023-kriter13-2_c.png"></p>
+<h2>Поисковый запрос</h2>
+<p><img alt="pic" src="./images/evich2021-V01-Z08_task.png"></p>
+<h3>Решение</h3>
+<p><img alt="pic" src="./images/evich2021-V01-Z08_solution.png"></p>
+<h3>Вариант 2</h3>
+<p><img alt="pic" src="./images/evich2021-V02-Z08_task.png"></p>
+<h3>Вариант 3</h3>
+<p><img alt="pic" src="./images/evich2021-V03-Z08_task.png"></p>
+<h2>Ответы к заданиям 8</h2>
+<p><img alt="pic" src="./images/evich2021-Z08_answers.png"></p>
+<h2>Вариант 20 (Домашнее задание)</h2>
+<p><img alt="pic" src="./images/evich2021-V20-Z08_task.png"></p>
+<h3>Подсказка:</h3>
+<p><img alt="pic" src="./images/evich2021-V20-Z08_solution.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
