--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-05.html">Урок 5</a></h2>
+<h5><i class="icon-feather"></i> Tue 18 October 2022 </h5>
+Разбор задания 7 (Интернет-адрес) из вариантов 1-3; + Контрольная работа
 <h2><a href="./lesson-04.html">Урок 4</a></h2>
 <h5><i class="icon-feather"></i> Tue 11 October 2022 </h5>
 Разбор задания 8 (Поисковый запрос) из вариантов 1-3
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-01.html">Урок 1</a></h2>
 <h5><i class="icon-feather"></i> Tue 20 September 2022 </h5>
 Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста) из варианта 1
-<h2><a href="./evichansw.html">Ответы</a></h2>
-<h5><i class="icon-feather"></i> Fri 16 September 2022 </h5>
-Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
 <div class="pagination">
     page 1 of 2.
         <a href="./index2.html">Next&rarr;</a>
