--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-07.html">Урок 7</a></h2>
+<h5><i class="icon-feather"></i> Tue 01 November 2022 </h5>
+Разбор задания 6 (Конечный цикл) из вариантов 13-15
+<h2><a href="./lesson-06.html">Урок 6</a></h2>
+<h5><i class="icon-feather"></i> Tue 25 October 2022 </h5>
+Разбор задания 6 (Условный оператор) из вариантов 1-3
 <h2><a href="./lesson-05.html">Урок 5</a></h2>
 <h5><i class="icon-feather"></i> Tue 18 October 2022 </h5>
 Разбор задания 7 (Интернет-адрес) из вариантов 1-3; + Контрольная работа
@@ -29,14 +35,8 @@
 <h2><a href="./lesson-03.html">Урок 3</a></h2>
 <h5><i class="icon-feather"></i> Tue 04 October 2022 </h5>
 Разбор задания 9 (Схема дорог) из вариантов 1-3
-<h2><a href="./lesson-02.html">Урок 2</a></h2>
-<h5><i class="icon-feather"></i> Tue 27 September 2022 </h5>
-Разбор задания 10 (Системы счисления) из вариантов 1-3; Разбор домашнего задания (13.2 вариант 2)
-<h2><a href="./lesson-01.html">Урок 1</a></h2>
-<h5><i class="icon-feather"></i> Tue 20 September 2022 </h5>
-Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста) из варианта 1
 <div class="pagination">
-    page 1 of 2.
+    page 1 of 3.
         <a href="./index2.html">Next&rarr;</a>
 </div>    </div>
 </div>
