--- a/lesson-05.html
+++ b/lesson-05.html
@@ -27,7 +27,7 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h2>Интернет-адрес</h2>
+<h2>Задание 7 -- Интернет-адрес</h2>
 <p><img alt="pic" src="./images/evich2021-V01-Z07_task.png"></p>
 <h2>Решение</h2>
 <p><img alt="pic" src="./images/evich2021-V01-Z07_solution.png"></p>
