lesson-mem-python

--- a/index3.html
+++ b/index3.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./fipi.html">Ф И П И</a></h2>
+<h5><i class="icon-feather"></i> Mon 12 September 2022 </h5>
+Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
 <h2><a href="./meeting.html">Договор</a></h2>
 <h5><i class="icon-feather"></i> Sun 11 September 2022 </h5>
 Знакомство с родителями и договор
