--- a/drafts/mempython.html
+++ b/drafts/mempython.html
@@ -7,24 +7,24 @@
 <meta name="description" content="Шпаргалка по языку Python"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
-  <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-  <link href="./" type="application/atom+xml" rel="alternate" title="ОГЭ 2023 информатика ATOM Feed" />
+  <link href="../theme/css/screen.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" href="../favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+  <link href="../" type="application/atom+xml" rel="alternate" title="ОГЭ 2023 информатика ATOM Feed" />
 </head>
 <body>
 <div id="outer-wrapper">
 <div id="header-wrapper">
-  <div class="logo"><a href=".">ОГЭ 2023 информатика</a></div>
+  <div class="logo"><a href="..">ОГЭ 2023 информатика</a></div>
   <div class="small"></div>
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./mempython.html">"Питон"</a></h2>
+<h2><a href="../drafts/mempython.html">"Питон"</a></h2>
 <h5><i class="icon-feather"></i> Sat 17 September 2022
 <i class="icon-bookmarks"></i>
-<span><a href="./tag/oge.html">oge</a> / </span>
-<span><a href="./tag/book.html">book</a> / </span>
+<span><a href="../tag/oge.html">oge</a> / </span>
+<span><a href="../tag/book.html">book</a> / </span>
 </h5>
 
 <h2>Типы данных</h2>
@@ -55,14 +55,14 @@
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
-     <li class="footer"><a href="./tag/book.html">book&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/fipi.html">fipi&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/lesson.html">lesson&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/log.html">log&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/oge.html">oge</a></li>
+     <li class="footer"><a href="../tag/book.html">book&nbsp;&bull;&nbsp;</a></li>
+     <li class="footer"><a href="../tag/fipi.html">fipi&nbsp;&bull;&nbsp;</a></li>
+     <li class="footer"><a href="../tag/lesson.html">lesson&nbsp;&bull;&nbsp;</a></li>
+     <li class="footer"><a href="../tag/log.html">log&nbsp;&bull;&nbsp;</a></li>
+     <li class="footer"><a href="../tag/oge.html">oge</a></li>
 </ul><ul class="footer">
     <li class="footer">&copy;&nbsp;2022&nbsp;::</li>
-    <li class="footer"><a href=".">ОГЭ 2023 информатика </a>&nbsp;::</li>
+    <li class="footer"><a href="..">ОГЭ 2023 информатика </a>&nbsp;::</li>
 </ul>
 </div></body>
 </html>
