--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-07.html">Урок 7</a></h2>
-<h5><i class="icon-feather"></i> Tue 01 November 2022 </h5>
-Разбор задания 6 (Конечный цикл) из вариантов 13-15
 <h2><a href="./lesson-06.html">Урок 6</a></h2>
 <h5><i class="icon-feather"></i> Tue 25 October 2022 </h5>
 Разбор задания 6 (Условный оператор) из вариантов 1-3
@@ -35,8 +32,11 @@
 <h2><a href="./lesson-03.html">Урок 3</a></h2>
 <h5><i class="icon-feather"></i> Tue 04 October 2022 </h5>
 Разбор задания 9 (Схема дорог) из вариантов 1-3
+<h2><a href="./lesson-02.html">Урок 2</a></h2>
+<h5><i class="icon-feather"></i> Tue 27 September 2022 </h5>
+Разбор задания 10 (Системы счисления) из вариантов 1-3; Разбор домашнего задания (13.2 вариант 2)
 <div class="pagination">
-    page 1 of 3.
+    page 1 of 2.
         <a href="./index2.html">Next&rarr;</a>
 </div>    </div>
 </div>
