--- a/index2.html
+++ b/index2.html
@@ -20,25 +20,24 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-02.html">Урок 2</a></h2>
-<h5><i class="icon-feather"></i> Tue 27 September 2022 </h5>
-Разбор задания 10 (Системы счисления) из вариантов 1-3; Разбор домашнего задания (13.2 вариант 2)
 <h2><a href="./lesson-01.html">Урок 1</a></h2>
 <h5><i class="icon-feather"></i> Tue 20 September 2022 </h5>
 Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста) из варианта 1
-<h2><a href="./mempython.html">"Питон"</a></h2>
-<h5><i class="icon-feather"></i> Sat 17 September 2022 </h5>
-Шпаргалка по языку Python
 <h2><a href="./evichansw.html">Ответы</a></h2>
 <h5><i class="icon-feather"></i> Fri 16 September 2022 </h5>
 Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
 <h2><a href="./evichbook.html">Книга</a></h2>
 <h5><i class="icon-feather"></i> Thu 15 September 2022 </h5>
 Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
+<h2><a href="./fipi.html">Ф И П И</a></h2>
+<h5><i class="icon-feather"></i> Mon 12 September 2022 </h5>
+Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
+<h2><a href="./meeting.html">Договор</a></h2>
+<h5><i class="icon-feather"></i> Sun 11 September 2022 </h5>
+Знакомство с родителями и договор
 <div class="pagination">
         <a href="./index.html">&larr;Prev</a>
-    page 2 of 3.
-        <a href="./index3.html">Next&rarr;</a>
+    page 2 of 2.
 </div>    </div>
 </div>
 <div id="footer-wrapper">
