next-lesson-some-inf

--- a/lesson-06.html
+++ b/lesson-06.html
@@ -4,7 +4,7 @@
   <title>Урок 6 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Разбор задания 6 (Условный оператор) из вариантов 1-3"><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор задания 6 (Условный оператор) из вариантов 1-3; +"Lifehuck""><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -38,6 +38,8 @@
 <p><img alt="pic" src="./images/evich2021-V01-Z06_program1.png"></p>
 <h4>Результаты выполнения программы</h4>
 <p><img alt="pic" src="./images/evich2021-V01-Z06_prog-ran.png"></p>
+<h3>"Lifehuck"</h3>
+<p><img alt="pic" src="./images/evich2021-V01-Z06_program2.png"></p>
 <h3>Вариант 2</h3>
 <p><img alt="pic" src="./images/evich2021-V02-Z06_task.png"></p>
 <h3>Вариант 3</h3>
