next-lesson-some-inf

--- a/lesson-06.html
+++ b/lesson-06.html
@@ -38,8 +38,6 @@
 <p><img alt="pic" src="./images/evich2021-V01-Z06_program1.png"></p>
 <h4>Результаты выполнения программы</h4>
 <p><img alt="pic" src="./images/evich2021-V01-Z06_prog-ran.png"></p>
-<h3>"Lifehuck"</h3>
-<p><img alt="pic" src="./images/evich2021-V01-Z06_program2.png"></p>
 <h3>Вариант 2</h3>
 <p><img alt="pic" src="./images/evich2021-V02-Z06_task.png"></p>
 <h3>Вариант 3</h3>
@@ -48,6 +46,10 @@
 <p><img alt="pic" src="./images/evich2021-Z06_answers.png"></p>
 <h2>Вариант 5 (Домашнее задание)</h2>
 <p><img alt="pic" src="./images/evich2021-V05-Z06_task.png"></p>
+<h3>"Lifehuck-1"</h3>
+<p><img alt="pic" src="./images/evich2021-V01-Z06_program2.png"></p>
+<h3>"Lifehuck-2"</h3>
+<p><img alt="pic" src="./images/evich2021-V01-Z06_program3.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
