--- a/lesson-06.html
+++ b/lesson-06.html
@@ -4,7 +4,7 @@
   <title>Урок 6 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Разбор задания 6 (Условный оператор) из вариантов 1-3; +"Lifehuck""><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор задания 6 (Условный оператор) из вариантов 1-3; + "Лайфхак""><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -46,9 +46,12 @@
 <p><img alt="pic" src="./images/evich2021-Z06_answers.png"></p>
 <h2>Вариант 5 (Домашнее задание)</h2>
 <p><img alt="pic" src="./images/evich2021-V05-Z06_task.png"></p>
-<h3>"Lifehuck-1"</h3>
+<hr>
+<h2>Lifehuck - 1</h2>
+<h3>(явное присваивание значений переменным -- вместо ввода с клавиатуры)</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z06_program2.png"></p>
-<h3>"Lifehuck-2"</h3>
+<h2>Lifehuck - 2</h2>
+<h3>(использование функции -- и вызов её с разными параметрами)</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z06_program3.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
