lesson-mem-python-v2

--- a/evichansw.html
+++ b/evichansw.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./evichansw.html">Ответы</a></h2>
-<h5><i class="icon-feather"></i> Fri 16 September 2022
+<h5><i class="icon-feather"></i> 16.09.2022, Пт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/book.html">book</a> / </span>
