--- a/fipi.html
+++ b/fipi.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./fipi.html">Ф И П И</a></h2>
-<h5><i class="icon-feather"></i> Mon 12 September 2022
+<h5><i class="icon-feather"></i> 12.09.2022, Пн
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/fipi.html">fipi</a> / </span>
