--- a/lesson-06.html
+++ b/lesson-06.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./lesson-06.html">Урок 6</a></h2>
-<h5><i class="icon-feather"></i> Tue 25 October 2022
+<h5><i class="icon-feather"></i> 25.10.2022, Вт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
