--- a/meeting.html
+++ b/meeting.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./meeting.html">Договор</a></h2>
-<h5><i class="icon-feather"></i> Sun 11 September 2022
+<h5><i class="icon-feather"></i> 11.09.2022, Вс
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/log.html">log</a> / </span>
 </h5>
