--- a/evichbook.html
+++ b/evichbook.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./evichbook.html">Книга</a></h2>
-<h5><i class="icon-feather"></i> Thu 15 September 2022
+<h5><i class="icon-feather"></i> 15.09.2022, Чт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/book.html">book</a> / </span>
