--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-07.html">Урок 7</a></h2>
+<h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
+Разбор задания 6 (Операторы циклов) из вариантов 13-15
 <h2><a href="./lesson-06.html">Урок 6</a></h2>
-<h5><i class="icon-feather"></i> Tue 25 October 2022 </h5>
+<h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
 Разбор задания 6 (Условный оператор) из вариантов 1-3; + "Лайфхак"
 <h2><a href="./lesson-05.html">Урок 5</a></h2>
-<h5><i class="icon-feather"></i> Tue 18 October 2022 </h5>
+<h5><i class="icon-feather"></i> 18.10.2022, Вт </h5>
 Разбор задания 7 (Интернет-адрес) из вариантов 1-3; + Контрольная работа
 <h2><a href="./lesson-04.html">Урок 4</a></h2>
-<h5><i class="icon-feather"></i> Tue 11 October 2022 </h5>
+<h5><i class="icon-feather"></i> 11.10.2022, Вт </h5>
 Разбор задания 8 (Поисковый запрос) из вариантов 1-3
 <h2><a href="./lesson-03.html">Урок 3</a></h2>
-<h5><i class="icon-feather"></i> Tue 04 October 2022 </h5>
+<h5><i class="icon-feather"></i> 04.10.2022, Вт </h5>
 Разбор задания 9 (Схема дорог) из вариантов 1-3
-<h2><a href="./lesson-02.html">Урок 2</a></h2>
-<h5><i class="icon-feather"></i> Tue 27 September 2022 </h5>
-Разбор задания 10 (Системы счисления) из вариантов 1-3; Разбор домашнего задания (13.2 вариант 2)
 <div class="pagination">
     page 1 of 3.
         <a href="./index2.html">Next&rarr;</a>
