--- a/lesson-01.html
+++ b/lesson-01.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./lesson-01.html">Урок 1</a></h2>
-<h5><i class="icon-feather"></i> Tue 20 September 2022
+<h5><i class="icon-feather"></i> 20.09.2022, Вт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
