--- a/lesson-04.html
+++ b/lesson-04.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./lesson-04.html">Урок 4</a></h2>
-<h5><i class="icon-feather"></i> Tue 11 October 2022
+<h5><i class="icon-feather"></i> 11.10.2022, Вт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
