--- a/mempython.html
+++ b/mempython.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./mempython.html">"Питон"</a></h2>
-<h5><i class="icon-feather"></i> Sat 17 September 2022
+<h5><i class="icon-feather"></i> 17.09.2022, Сб
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/book.html">book</a> / </span>
@@ -36,12 +36,14 @@
 <h2>Операции сравнения</h2>
 <p><img alt="pic" src="./images/mem-python-boolean.jpg"></p>
 <h2>Ввод и вывод</h2>
-<p><img alt="pic" src="./images/mem-python-io.jpg"></p>
+<p><img alt="pic" src="./images/mem-python-io.jpg">
+<img alt="pic" src="./images/mem-python-print-info.png"></p>
 <h2>Условный оператор</h2>
 <p><img alt="pic" src="./images/mem-python-if-else.jpg"></p>
 <h2>Конечный цикл</h2>
 <p><img alt="pic" src="./images/mem-python-for.jpg">
-<img alt="pic" src="./images/mem-python-range.jpg"></p>
+<img alt="pic" src="./images/mem-python-range.jpg">
+<img alt="pic" src="./images/mem-python-range-info.png"></p>
 <h2>Бесконечный цикл</h2>
 <p><img alt="pic" src="./images/mem-python-while.jpg"></p>
 <h2>Управление циклом</h2>
