lesson-mem-python-v3

--- a/drafts/lesson-08.html
+++ b/drafts/lesson-08.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика - andygram</title>
+  <title>Урок 8 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор задания 6 (Бесконечный цикл) из вариантов 17-19"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="../theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,21 +20,26 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2>andygram</h2>
-<dl>
-<dd><a href="../lesson-07.html">Урок 7</a></dd>
-<dd><a href="../lesson-06.html">Урок 6</a></dd>
-<dd><a href="../lesson-05.html">Урок 5</a></dd>
-<dd><a href="../lesson-04.html">Урок 4</a></dd>
-<dd><a href="../lesson-03.html">Урок 3</a></dd>
-<dd><a href="../lesson-02.html">Урок 2</a></dd>
-<dd><a href="../lesson-01.html">Урок 1</a></dd>
-<dd><a href="../mempython.html">Питончик</a></dd>
-<dd><a href="../evichansw.html">Ответы</a></dd>
-<dd><a href="../evichbook.html">Книга</a></dd>
-<dd><a href="../fipi.html">Ф И П И</a></dd>
-<dd><a href="../meeting.html">Договор</a></dd>
-</dl>
+<h2><a href="../drafts/lesson-08.html">Урок 8</a></h2>
+<h5><i class="icon-feather"></i> 08.11.2022, Вт
+<i class="icon-bookmarks"></i>
+<span><a href="../tag/oge.html">oge</a> / </span>
+<span><a href="../tag/lesson.html">lesson</a> / </span>
+</h5>
+
+<h1>Задание 6 : Бесконечный цикл</h1>
+<h3>Вариант 17</h3>
+<p><img alt="pic" src="./images/evich2021-V17-Z06_task.png"></p>
+<h3>Вариант 18</h3>
+<p><img alt="pic" src="./images/evich2021-V18-Z06_task.png"></p>
+<h3>Вариант 19</h3>
+<p><img alt="pic" src="./images/evich2021-V19-Z06_task.png"></p>
+<h2>Ответы к заданиям 6</h2>
+<p><img alt="pic" src="./images/evich2021-Z06_V17-19_answers.png"></p>
+<h2>Вариант 20 (Домашнее задание)</h2>
+<p><img alt="pic" src="./images/evich2021-V20-Z06_task.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
     </div>
 </div>
 <div id="footer-wrapper">
