--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>    <div id="main">
 <h2><a href="./lesson-07.html">Урок 7</a></h2>
 <h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
-Разбор задания 6 (Операторы циклов) из вариантов 13-15
+Разбор задания 6 (Конечный цикл) из вариантов 13-15
 <h2><a href="./lesson-06.html">Урок 6</a></h2>
 <h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
 Разбор задания 6 (Условный оператор) из вариантов 1-3; + "Лайфхак"
