--- a/lesson-03.html
+++ b/lesson-03.html
@@ -27,7 +27,7 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h2>Задание 9 -- Схема дорог</h2>
+<h1>Задание 9 : Схема дорог</h1>
 <p><img alt="pic" src="./images/evich2021-V01-Z09_task.png"></p>
 <h3>Решение перебором</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z09_perebor.png"></p>
