--- a/lesson-04.html
+++ b/lesson-04.html
@@ -27,7 +27,7 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h2>Задание 8 -- Поисковый запрос</h2>
+<h1>Задание 8 : Поисковый запрос</h1>
 <p><img alt="pic" src="./images/evich2021-V01-Z08_task.png"></p>
 <h3>Решение</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z08_solution.png"></p>
