--- a/lesson-07.html
+++ b/lesson-07.html
@@ -4,7 +4,7 @@
   <title>Урок 7 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Разбор задания 6 (Операторы циклов) из вариантов 13-15"><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор задания 6 (Конечный цикл) из вариантов 13-15"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -27,7 +27,7 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h2>Задание 6 -- Конечный цикл и Бесконечный цикл</h2>
+<h1>Задание 6 : Конечный цикл</h1>
 <h3>Вариант 13</h3>
 <p><img alt="pic" src="./images/evich2021-V13-Z06_task.png"></p>
 <h3>IDLE Python</h3>
@@ -41,9 +41,9 @@
 <h3>Вариант 15</h3>
 <p><img alt="pic" src="./images/evich2021-V15-Z06_task.png"></p>
 <h2>Ответы к заданиям 6</h2>
-<p><img alt="pic" src="./images/evich2021-Z06_answers.png"></p>
-<h2>Вариант 20 (Домашнее задание)</h2>
-<p><img alt="pic" src="./images/evich2021-V20-Z06_task.png"></p>
+<p><img alt="pic" src="./images/evich2021-Z06_V13-15_answers.png"></p>
+<h2>Вариант 16 (Домашнее задание)</h2>
+<p><img alt="pic" src="./images/evich2021-V16-Z06_task.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
