--- a/lesson-06.html
+++ b/lesson-06.html
@@ -27,7 +27,7 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h2>Задание 6 -- Условный оператор</h2>
+<h1>Задание 6 : Условный оператор</h1>
 <h3>Вариант 1</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z06_task.png"></p>
 <h3>Решение из книги</h3>
@@ -43,7 +43,7 @@
 <h3>Вариант 3</h3>
 <p><img alt="pic" src="./images/evich2021-V03-Z06_task.png"></p>
 <h2>Ответы к заданиям 6</h2>
-<p><img alt="pic" src="./images/evich2021-Z06_answers.png"></p>
+<p><img alt="pic" src="./images/evich2021-Z06_V01-03_answers.png"></p>
 <h2>Вариант 5 (Домашнее задание)</h2>
 <p><img alt="pic" src="./images/evich2021-V05-Z06_task.png"></p>
 <hr>
