--- a/mempython.html
+++ b/mempython.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>"Питон" | ОГЭ 2023 информатика</title>
+  <title>Питончик | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
 <meta name="description" content="Шпаргалка по языку Python"><meta name="author" content="andygram">-->
@@ -20,7 +20,7 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./mempython.html">"Питон"</a></h2>
+<h2><a href="./mempython.html">Питончик</a></h2>
 <h5><i class="icon-feather"></i> 17.09.2022, Сб
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
@@ -48,7 +48,7 @@
 <p><img alt="pic" src="./images/mem-python-while.jpg"></p>
 <h2>Управление циклом</h2>
 <p><img alt="pic" src="./images/mem-python-break.jpg"></p>
-<h2>Пример работы программы:</h2>
+<h1>Пример работающей программы:</h1>
 <p><img alt="pic" src="./images/mem-python-example.jpg">
 Программа содержит <u>все</u> необходимые для ОГЭ функции и конструкции языка <em>Python</em></p>
 
