--- a/mempython.html
+++ b/mempython.html
@@ -36,14 +36,16 @@
 <h2>Операции сравнения</h2>
 <p><img alt="pic" src="./images/mem-python-boolean.jpg"></p>
 <h2>Ввод и вывод</h2>
-<p><img alt="pic" src="./images/mem-python-io.jpg">
-[comment]: &lt;&gt; <img alt="pic" src="./images/mem-python-print-info.png"></p>
+<p><img alt="pic" src="./images/mem-python-io.jpg"></p>
+<!-- ![pic](./images/mem-python-print-info.png) -->
+
 <h2>Условный оператор</h2>
 <p><img alt="pic" src="./images/mem-python-if-else.jpg"></p>
 <h2>Конечный цикл</h2>
 <p><img alt="pic" src="./images/mem-python-for.jpg">
-<img alt="pic" src="./images/mem-python-range.jpg">
-[comment]: &lt;&gt; <img alt="pic" src="./images/mem-python-range-info.png"></p>
+<img alt="pic" src="./images/mem-python-range.jpg"></p>
+<!-- ![pic](./images/mem-python-range-info.png) -->
+
 <h2>Бесконечный цикл</h2>
 <p><img alt="pic" src="./images/mem-python-while.jpg"></p>
 <h2>Управление циклом</h2>
