next-lesson-some-inf

--- a/lesson-09.html
+++ b/lesson-09.html
@@ -32,6 +32,8 @@
 <p><img alt="pic" src="./images/evich2021-V01-Z04_task.png"></p>
 <h3>Решение из книги</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z04_solution.png"></p>
+<h3>Симметричность таблицы относительно Главной диагонали</h3>
+<p><img alt="pic" src="./images/evich2021-V01-Z04_table.png"></p>
 <h3>Вариант 2</h3>
 <p><img alt="pic" src="./images/evich2021-V02-Z04_task.png"></p>
 <h3>Вариант 3</h3>
