next-lesson-10-init

--- a/lesson-10.html
+++ b/lesson-10.html
@@ -28,6 +28,7 @@
 </h5>
 
 <h1>Задание 3 : Логическое выражение</h1>
+<p><img alt="pic" src="./images/Boolean-operators.png"></p>
 <h3>Вариант 1</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z03_task.png"></p>
 <h3>Решение из книги</h3>
@@ -44,8 +45,16 @@
 <p><img alt="pic" src="./images/evich2021-V12-Z03_task.png"></p>
 <h3>Вариант 13</h3>
 <p><img alt="pic" src="./images/evich2021-V13-Z03_task.png"></p>
-<h2>Вариант 20 (Домашнее задание)</h2>
+<h2>Задание повышенной сложности</h2>
+<h3>Вариант 20</h3>
 <p><img alt="pic" src="./images/evich2021-V20-Z03_task.png"></p>
+<h2>Домашнее задание</h2>
+<h3>Вариант 17</h3>
+<p><img alt="pic" src="./images/evich2021-V17-Z03_task.png"></p>
+<h3>Вариант 18</h3>
+<p><img alt="pic" src="./images/evich2021-V18-Z03_task.png"></p>
+<h3>Вариант 19</h3>
+<p><img alt="pic" src="./images/evich2021-V19-Z03_task.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
