next-lesson-12-init3

--- a/lesson-12.html
+++ b/lesson-12.html
@@ -36,15 +36,15 @@
 <h2>Ответы к заданиям 1</h2>
 <p><img alt="pic" src="./images/evich2021-Z02_answers.png"></p>
 <h3>Что надо знать</h3>
-<p><img alt="pic" src="./images/evich2021-Z01_img1.png"></p>
+<p><img alt="pic" src="./images/evich2021-Z01_img1.jpg"></p>
 <h3>Что надо уметь</h3>
-<p><img alt="pic" src="./images/evich2021-Z01_img2.png"></p>
+<p><img alt="pic" src="./images/evich2021-Z01_img2.jpg"></p>
 <h3>Задача 1</h3>
-<p><img alt="pic" src="./images/evich2021-Z01_img3.png"></p>
+<p><img alt="pic" src="./images/evich2021-Z01_img3.jpg"></p>
 <h3>Задача 2</h3>
-<p><img alt="pic" src="./images/evich2021-Z01_img4.png"></p>
+<p><img alt="pic" src="./images/evich2021-Z01_img4.jpg"></p>
 <h3>Задача 3</h3>
-<p><img alt="pic" src="./images/evich2021-Z01_img5.png"></p>
+<p><img alt="pic" src="./images/evich2021-Z01_img5.jpg"></p>
 <h2>Заданий повышенной сложности нет</h2>
 
 <p align="center"><a href="#">on the top</a></p>
