next-lesson-13-init2

--- a/lesson-13.html
+++ b/lesson-13.html
@@ -31,6 +31,10 @@
 <p><img alt="pic" src="./images/evich2021-Z05.png"></p>
 <h3>Вариант 1</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z05_task.png"></p>
+<h3>Вариант 2</h3>
+<p><img alt="pic" src="./images/evich2021-V02-Z05_task.png"></p>
+<h3>Вариант 3</h3>
+<p><img alt="pic" src="./images/evich2021-V03-Z05_task.png"></p>
 <h3>Решение из книги</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z05_solution.png"></p>
 <h2>Ответы к заданиям 5</h2>
