next-lesson-13-init4

--- a/lesson-13.html
+++ b/lesson-13.html
@@ -45,12 +45,12 @@
 <p><img alt="pic" src="./images/evich2021-V12-Z05_task.png"></p>
 <h3>Вариант 13</h3>
 <p><img alt="pic" src="./images/evich2021-V13-Z05_task.png"></p>
-<h2>Заданий повышенной сложности нет</h2>
-<h2>Домашнее задание</h2>
+<h2>Задание повышенной сложности</h2>
 <h3>Вариант 17</h3>
 <p><img alt="pic" src="./images/evich2021-V17-Z05_task.png"></p>
 <h3>Вариант 18</h3>
 <p><img alt="pic" src="./images/evich2021-V18-Z05_task.png"></p>
+<h2>Домашнее задание</h2>
 <h3>Вариант 19</h3>
 <p><img alt="pic" src="./images/evich2021-V19-Z05_task.png"></p>
 <h3>Вариант 20</h3>
