next-lesson-14-init-1

--- a/lesson-14.html
+++ b/lesson-14.html
@@ -33,7 +33,8 @@
 <img alt="pic" src="./images/evich2021-V15-p3.png">
 <img alt="pic" src="./images/evich2021-V15-p4.png"></p>
 <h2>Ответы к заданиям</h2>
-<p><img alt="pic" src="./images/evich2021-book-answer-1.png"></p>
+<p><img alt="pic" src="./images/evich2021-book-answer-1.png">
+<img alt="pic" src="./images/evich2021-book-answer-2.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
