next-lesson-14-init-2

--- a/lesson-14.html
+++ b/lesson-14.html
@@ -28,12 +28,11 @@
 </h5>
 
 <h1>Вариант 15</h1>
-<h2>Ответы к заданиям</h2>
-<p><img alt="pic" src="./images/evich2021-V15-answers.png"></p>
 <p><img alt="pic" src="./images/evich2021-V15-p1.png">
 <img alt="pic" src="./images/evich2021-V15-p2.png">
 <img alt="pic" src="./images/evich2021-V15-p3.png">
-<img alt="pic" src="./images/evich2021-V15-p4.png"></p>
+<img alt="pic" src="./images/evich2021-V15-p4.png">
+<img alt="pic" src="./images/evich2021-V15-answers.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
