next-lesson-15-init-0

--- a/lesson-15.html
+++ b/lesson-15.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика</title>
+  <title>Урок 15 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Стратегия сдачи ОГЭ на 13 баллов из 19"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,26 +20,19 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-10.html">Урок 10</a></h2>
-<h5><i class="icon-feather"></i> 29.11.2022, Вт </h5>
-Разбор задания 3 (Истинность высказывания) из вариантов 1-3, 11-13
-<h2><a href="./lesson-09.html">Урок 9</a></h2>
-<h5><i class="icon-feather"></i> 22.11.2022, Вт </h5>
-Разбор задания 4 (Кратчайшее расстояние) из вариантов 1-3
-<h2><a href="./lesson-08.html">Урок 8</a></h2>
-<h5><i class="icon-feather"></i> 08.11.2022, Вт </h5>
-Разбор задания 6 (Бесконечный цикл) из вариантов 17-19
-<h2><a href="./lesson-07.html">Урок 7</a></h2>
-<h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
-Разбор задания 6 (Конечный цикл) из вариантов 13-15
-<h2><a href="./lesson-06.html">Урок 6</a></h2>
-<h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
-Разбор задания 6 (Условный оператор) из вариантов 1-3; + "Лайфхак"
-<div class="pagination">
-        <a href="./index.html">&larr;Prev</a>
-    page 2 of 4.
-        <a href="./index3.html">Next&rarr;</a>
-</div>    </div>
+<h2><a href="./lesson-15.html">Урок 15</a></h2>
+<h5><i class="icon-feather"></i> 21.01.2023, Сб
+<i class="icon-bookmarks"></i>
+<span><a href="./tag/oge.html">oge</a> / </span>
+<span><a href="./tag/lesson.html">lesson</a> / </span>
+</h5>
+
+<p><img alt="pic" src="./images/oge-inf-2023-mark.png"></p>
+<h1>Решение заданий первой части</h1>
+<h1>Решение заданий второй части</h1>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
