next-lesson-15-init-1

--- a/lesson-15.html
+++ b/lesson-15.html
@@ -27,9 +27,12 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
+<h1>Стратегия сдачи ОГЭ на 13 баллов из 19</h1>
 <p><img alt="pic" src="./images/oge-inf-2023-mark.png"></p>
-<h1>Решение заданий первой части</h1>
-<h1>Решение заданий второй части</h1>
+<h2>Решение заданий первой части</h2>
+<p><img alt="pic" src="./images/oge-inf-part-1.png"></p>
+<h2>Решение заданий второй части</h2>
+<p><img alt="pic" src="./images/oge-inf-part-2.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
