next-lesson-15-init-5

--- a/lesson-15.html
+++ b/lesson-15.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./lesson-15.html">Урок 15</a></h2>
-<h5><i class="icon-feather"></i> 21.01.2023, Сб
+<h5><i class="icon-feather"></i> 24.01.2023, Вт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
