next-lesson-16-init-0

--- a/lesson-15.html
+++ b/lesson-15.html
@@ -35,6 +35,10 @@
 <p><img alt="pic" src="./images/oge-inf-part-2.png"></p>
 <h3>Субъективная оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-1.png"></p>
+<h3>Решение задачи 9 из вариантов 11-19</h3>
+<p>Обнаружено большое количество опечаток в книге</p>
+<h3>Скорректированная оценка уровня подготовки</h3>
+<p><img alt="pic" src="./images/oge-inf-curr-level-2.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
