--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-16.html">Урок 16</a></h2>
+<h5><i class="icon-feather"></i> 31.01.2023, Вт </h5>
+Логические выражения. Повторение
 <h2><a href="./lesson-15.html">Урок 15</a></h2>
 <h5><i class="icon-feather"></i> 24.01.2023, Вт </h5>
 Стратегия сдачи ОГЭ на 13 баллов из 19
@@ -32,11 +35,8 @@
 <h2><a href="./lesson-12.html">Урок 12</a></h2>
 <h5><i class="icon-feather"></i> 20.12.2022, Вт </h5>
 Разбор задания 1 (Биты и байты) из вариантов 1-3
-<h2><a href="./lesson-11.html">Урок 11</a></h2>
-<h5><i class="icon-feather"></i> 13.12.2022, Вт </h5>
-Разбор задания 2 (Зашифрованное сообщение) из вариантов 1-3, 11-13
 <div class="pagination">
-    page 1 of 4.
+    page 1 of 5.
         <a href="./index2.html">Next&rarr;</a>
 </div>    </div>
 </div>
