--- a/index3.html
+++ b/index3.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-06.html">Урок 6</a></h2>
+<h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
+Разбор задания 6 (Условный оператор) из вариантов 1-3; + "Лайфхак"
 <h2><a href="./lesson-05.html">Урок 5</a></h2>
 <h5><i class="icon-feather"></i> 18.10.2022, Вт </h5>
 Разбор задания 7 (Интернет-адрес) из вариантов 1-3; + Контрольная работа
@@ -32,12 +35,9 @@
 <h2><a href="./lesson-02.html">Урок 2</a></h2>
 <h5><i class="icon-feather"></i> 27.09.2022, Вт </h5>
 Разбор задания 10 (Системы счисления) из вариантов 1-3; Разбор домашнего задания (13.2 вариант 2)
-<h2><a href="./lesson-01.html">Урок 1</a></h2>
-<h5><i class="icon-feather"></i> 20.09.2022, Вт </h5>
-Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста) из варианта 1
 <div class="pagination">
         <a href="./index2.html">&larr;Prev</a>
-    page 3 of 4.
+    page 3 of 5.
         <a href="./index4.html">Next&rarr;</a>
 </div>    </div>
 </div>
