--- a/index5.html
+++ b/index5.html
@@ -20,25 +20,12 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-11.html">Урок 11</a></h2>
-<h5><i class="icon-feather"></i> 13.12.2022, Вт </h5>
-Разбор задания 2 (Зашифрованное сообщение) из вариантов 1-3, 11-13
-<h2><a href="./lesson-10.html">Урок 10</a></h2>
-<h5><i class="icon-feather"></i> 29.11.2022, Вт </h5>
-Разбор задания 3 (Истинность высказывания) из вариантов 1-3, 11-13
-<h2><a href="./lesson-09.html">Урок 9</a></h2>
-<h5><i class="icon-feather"></i> 22.11.2022, Вт </h5>
-Разбор задания 4 (Кратчайшее расстояние) из вариантов 1-3
-<h2><a href="./lesson-08.html">Урок 8</a></h2>
-<h5><i class="icon-feather"></i> 08.11.2022, Вт </h5>
-Разбор задания 6 (Бесконечный цикл) из вариантов 17-19
-<h2><a href="./lesson-07.html">Урок 7</a></h2>
-<h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
-Разбор задания 6 (Конечный цикл) из вариантов 13-15
+<h2><a href="./meeting.html">Договор</a></h2>
+<h5><i class="icon-feather"></i> 11.09.2022, Вс </h5>
+Знакомство с родителями и договор
 <div class="pagination">
-        <a href="./index.html">&larr;Prev</a>
-    page 2 of 5.
-        <a href="./index3.html">Next&rarr;</a>
+        <a href="./index4.html">&larr;Prev</a>
+    page 5 of 5.
 </div>    </div>
 </div>
 <div id="footer-wrapper">
