--- a/lesson-16.html
+++ b/lesson-16.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика</title>
+  <title>Урок 16 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Логические выражения. Повторение"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,26 +20,18 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-11.html">Урок 11</a></h2>
-<h5><i class="icon-feather"></i> 13.12.2022, Вт </h5>
-Разбор задания 2 (Зашифрованное сообщение) из вариантов 1-3, 11-13
-<h2><a href="./lesson-10.html">Урок 10</a></h2>
-<h5><i class="icon-feather"></i> 29.11.2022, Вт </h5>
-Разбор задания 3 (Истинность высказывания) из вариантов 1-3, 11-13
-<h2><a href="./lesson-09.html">Урок 9</a></h2>
-<h5><i class="icon-feather"></i> 22.11.2022, Вт </h5>
-Разбор задания 4 (Кратчайшее расстояние) из вариантов 1-3
-<h2><a href="./lesson-08.html">Урок 8</a></h2>
-<h5><i class="icon-feather"></i> 08.11.2022, Вт </h5>
-Разбор задания 6 (Бесконечный цикл) из вариантов 17-19
-<h2><a href="./lesson-07.html">Урок 7</a></h2>
-<h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
-Разбор задания 6 (Конечный цикл) из вариантов 13-15
-<div class="pagination">
-        <a href="./index.html">&larr;Prev</a>
-    page 2 of 5.
-        <a href="./index3.html">Next&rarr;</a>
-</div>    </div>
+<h2><a href="./lesson-16.html">Урок 16</a></h2>
+<h5><i class="icon-feather"></i> 31.01.2023, Вт
+<i class="icon-bookmarks"></i>
+<span><a href="./tag/oge.html">oge</a> / </span>
+<span><a href="./tag/lesson.html">lesson</a> / </span>
+</h5>
+
+<h3>Оценка текущего уровня подготовки</h3>
+<p><img alt="pic" src="./images/oge-inf-curr-level-2.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
