next-lesson-16-init-1

--- a/lesson-16.html
+++ b/lesson-16.html
@@ -21,12 +21,17 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./lesson-16.html">Урок 16</a></h2>
-<h5><i class="icon-feather"></i> 31.01.2023, Вт
+<h5><i class="icon-feather"></i> 01.02.2023, Ср
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
+<p><img alt="pic" src="./images/logic-diags.png"></p>
+<p><img alt="pic" src="./images/logic-and.png">
+<img alt="pic" src="./images/logic-not.png">
+<img alt="pic" src="./images/logic-or.png">
+<img alt="pic" src="./images/logic-order.png"></p>
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-2.png"></p>
 
