next-lesson-16-init-2

--- a/lesson-16.html
+++ b/lesson-16.html
@@ -27,13 +27,15 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
+<h2>Логические выражения. Повторение</h2>
 <p><img alt="pic" src="./images/logic-diags.png"></p>
+<h3>Оценка текущего уровня подготовки</h3>
+<p><img alt="pic" src="./images/oge-inf-curr-level-2.png"></p>
 <p><img alt="pic" src="./images/logic-and.png">
 <img alt="pic" src="./images/logic-not.png">
 <img alt="pic" src="./images/logic-or.png">
-<img alt="pic" src="./images/logic-order.png"></p>
-<h3>Оценка текущего уровня подготовки</h3>
-<p><img alt="pic" src="./images/oge-inf-curr-level-2.png"></p>
+<img alt="pic" src="./images/logic-order.png">
+<img alt="pic" src="./images/logic-diags-all.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
