next-lesson-16-init-3

--- a/lesson-16.html
+++ b/lesson-16.html
@@ -34,8 +34,10 @@
 <p><img alt="pic" src="./images/logic-and.png">
 <img alt="pic" src="./images/logic-not.png">
 <img alt="pic" src="./images/logic-or.png">
-<img alt="pic" src="./images/logic-order.png">
-<img alt="pic" src="./images/logic-diags-all.png"></p>
+<img alt="pic" src="./images/logic-order.png"></p>
+<h3>Скорректированная оценка уровня подготовки</h3>
+<p><img alt="pic" src="./images/oge-inf-curr-level-3.png"></p>
+<p><img alt="pic" src="./images/logic-all.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
