next-lesson-17-init-0

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-17.html">Урок 17</a></h2>
+<h5><i class="icon-feather"></i> 07.02.2023, Вт </h5>
+Таблица дорог. Повторение
 <h2><a href="./lesson-16.html">Урок 16</a></h2>
-<h5><i class="icon-feather"></i> 01.02.2023, Ср </h5>
+<h5><i class="icon-feather"></i> 03.02.2023, Пт </h5>
 Логические выражения. Повторение
 <h2><a href="./lesson-15.html">Урок 15</a></h2>
 <h5><i class="icon-feather"></i> 24.01.2023, Вт </h5>
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-13.html">Урок 13</a></h2>
 <h5><i class="icon-feather"></i> 11.01.2023, Ср </h5>
 Разбор задания 5 (Вычислитель) из вариантов 1-3
-<h2><a href="./lesson-12.html">Урок 12</a></h2>
-<h5><i class="icon-feather"></i> 20.12.2022, Вт </h5>
-Разбор задания 1 (Биты и байты) из вариантов 1-3
 <div class="pagination">
     page 1 of 5.
         <a href="./index2.html">Next&rarr;</a>
