--- a/index3.html
+++ b/index3.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-07.html">Урок 7</a></h2>
+<h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
+Разбор задания 6 (Конечный цикл) из вариантов 13-15
 <h2><a href="./lesson-06.html">Урок 6</a></h2>
 <h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
 Разбор задания 6 (Условный оператор) из вариантов 1-3; + "Лайфхак"
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-03.html">Урок 3</a></h2>
 <h5><i class="icon-feather"></i> 04.10.2022, Вт </h5>
 Разбор задания 9 (Схема дорог) из вариантов 1-3
-<h2><a href="./lesson-02.html">Урок 2</a></h2>
-<h5><i class="icon-feather"></i> 27.09.2022, Вт </h5>
-Разбор задания 10 (Системы счисления) из вариантов 1-3; Разбор домашнего задания (13.2 вариант 2)
 <div class="pagination">
         <a href="./index2.html">&larr;Prev</a>
     page 3 of 5.
