--- a/lesson-16.html
+++ b/lesson-16.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./lesson-16.html">Урок 16</a></h2>
-<h5><i class="icon-feather"></i> 01.02.2023, Ср
+<h5><i class="icon-feather"></i> 03.02.2023, Пт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
@@ -35,9 +35,10 @@
 <img alt="pic" src="./images/logic-not.png">
 <img alt="pic" src="./images/logic-or.png">
 <img alt="pic" src="./images/logic-order.png"></p>
+<h3>Дополнительная информация</h3>
+<p><img alt="pic" src="./images/logic-all.png"></p>
 <h3>Скорректированная оценка уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-3.png"></p>
-<p><img alt="pic" src="./images/logic-all.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
