--- a/lesson-17.html
+++ b/lesson-17.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика</title>
+  <title>Урок 17 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Таблица дорог. Повторение"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,16 +20,18 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./fipi.html">Ф И П И</a></h2>
-<h5><i class="icon-feather"></i> 12.09.2022, Пн </h5>
-Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
-<h2><a href="./meeting.html">Договор</a></h2>
-<h5><i class="icon-feather"></i> 11.09.2022, Вс </h5>
-Знакомство с родителями и договор
-<div class="pagination">
-        <a href="./index4.html">&larr;Prev</a>
-    page 5 of 5.
-</div>    </div>
+<h2><a href="./lesson-17.html">Урок 17</a></h2>
+<h5><i class="icon-feather"></i> 07.02.2023, Вт
+<i class="icon-bookmarks"></i>
+<span><a href="./tag/oge.html">oge</a> / </span>
+<span><a href="./tag/lesson.html">lesson</a> / </span>
+</h5>
+
+<h3>Оценка текущего уровня подготовки</h3>
+<p><img alt="pic" src="./images/oge-inf-curr-level-3.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
