next-lesson-17-init-3

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>    <div id="main">
 <h2><a href="./lesson-17.html">Урок 17</a></h2>
 <h5><i class="icon-feather"></i> 07.02.2023, Вт </h5>
-Таблица дорог. Повторение
+Задания 4 и 5. Повторение
 <h2><a href="./lesson-16.html">Урок 16</a></h2>
 <h5><i class="icon-feather"></i> 03.02.2023, Пт </h5>
 Логические выражения. Повторение
