next-lesson-17-init-4

--- a/lesson-17.html
+++ b/lesson-17.html
@@ -4,7 +4,7 @@
   <title>Урок 17 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Задания 4 и 5. Повторение"><meta name="author" content="andygram">-->
+<meta name="description" content="Задания 5 и 4. Повторение"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -29,17 +29,23 @@
 
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-3.png"></p>
-<h2>Задание 5 (Вычислитель). Схема решения</h2>
+<h1>Задание 5 (Линейный алгоритм)</h1>
+<h3>Вариант 9</h3>
+<p><img alt="pic" src="./images/evich2021-V09-Z04_task.png"></p>
+<h2>Вычислитель. Схема решения</h2>
 <p><img alt="pic" src="./images/evich2021-repeat-Z05.png"></p>
 <h2>Задания повышенной сложности</h2>
 <h3>Вариант 19</h3>
 <p><img alt="pic" src="./images/evich2021-V19-Z05_task.png"></p>
 <h3>Вариант 20</h3>
 <p><img alt="pic" src="./images/evich2021-V20-Z05_task.png"></p>
-<h2>Задание 4 (Таблица дорог). Схема решения</h2>
+<h1>Задание 4 (Симметричная таблица)</h1>
+<h2>Таблица дорог. Схема решения</h2>
 <p><img alt="pic" src="./images/evich2021-repeat-Z04.png"></p>
 <h2>Вариант 13 (Домашнее задание)</h2>
 <p><img alt="pic" src="./images/evich2021-V13-Z04_task.png"></p>
+<h3>Скорректированная оценка уровня подготовки</h3>
+<p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
