next-lesson-18-init-0

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-18.html">Урок 18</a></h2>
+<h5><i class="icon-feather"></i> 14.02.2023, Вт </h5>
+Повторение: Задание 6 (Анализ программного кода)
 <h2><a href="./lesson-17.html">Урок 17</a></h2>
 <h5><i class="icon-feather"></i> 07.02.2023, Вт </h5>
-Задания 4 и 5. Повторение
+Повторение: Задания 5(Вычислитель) и 4(Расстояние)
 <h2><a href="./lesson-16.html">Урок 16</a></h2>
 <h5><i class="icon-feather"></i> 03.02.2023, Пт </h5>
-Логические выражения. Повторение
+Повторение: Логические выражения
 <h2><a href="./lesson-15.html">Урок 15</a></h2>
 <h5><i class="icon-feather"></i> 24.01.2023, Вт </h5>
 Стратегия сдачи ОГЭ на 13 баллов из 19
 <h2><a href="./lesson-14.html">Урок 14</a></h2>
 <h5><i class="icon-feather"></i> 14.01.2023, Сб </h5>
 Решение заданий первой части
-<h2><a href="./lesson-13.html">Урок 13</a></h2>
-<h5><i class="icon-feather"></i> 11.01.2023, Ср </h5>
-Разбор задания 5 (Вычислитель) из вариантов 1-3
 <div class="pagination">
     page 1 of 5.
         <a href="./index2.html">Next&rarr;</a>
