--- a/lesson-16.html
+++ b/lesson-16.html
@@ -4,7 +4,7 @@
   <title>Урок 16 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Логические выражения. Повторение"><meta name="author" content="andygram">-->
+<meta name="description" content="Повторение: Логические выражения"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -31,12 +31,12 @@
 <p><img alt="pic" src="./images/logic-diags.png"></p>
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-2.png"></p>
-<p><img alt="pic" src="./images/logic-or.png">
+<p><img alt="pic" src="./images/logic-not.png">
 <img alt="pic" src="./images/logic-and.png">
-<img alt="pic" src="./images/logic-not.png">
-<img alt="pic" src="./images/logic-order.png"></p>
+<img alt="pic" src="./images/logic-or.png"></p>
 <h3>Дополнительная информация</h3>
-<p><img alt="pic" src="./images/logic-all.png"></p>
+<p><img alt="pic" src="./images/logic-all.png">
+<img alt="pic" src="./images/logic-order.png"></p>
 <h3>Скорректированная оценка уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-3.png"></p>
 
