--- a/lesson-17.html
+++ b/lesson-17.html
@@ -4,7 +4,7 @@
   <title>Урок 17 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Задания 5 и 4. Повторение"><meta name="author" content="andygram">-->
+<meta name="description" content="Повторение: Задания 5(Вычислитель) и 4(Расстояние)"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
