--- a/lesson-18.html
+++ b/lesson-18.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика</title>
+  <title>Урок 18 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Повторение: Задание 6 (Анализ программного кода)"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,19 +20,23 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./evichbook.html">Книга</a></h2>
-<h5><i class="icon-feather"></i> 15.09.2022, Чт </h5>
-Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
-<h2><a href="./fipi.html">Ф И П И</a></h2>
-<h5><i class="icon-feather"></i> 12.09.2022, Пн </h5>
-Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
-<h2><a href="./meeting.html">Договор</a></h2>
-<h5><i class="icon-feather"></i> 11.09.2022, Вс </h5>
-Знакомство с родителями и договор
-<div class="pagination">
-        <a href="./index4.html">&larr;Prev</a>
-    page 5 of 5.
-</div>    </div>
+<h2><a href="./lesson-18.html">Урок 18</a></h2>
+<h5><i class="icon-feather"></i> 14.02.2023, Вт
+<i class="icon-bookmarks"></i>
+<span><a href="./tag/oge.html">oge</a> / </span>
+<span><a href="./tag/lesson.html">lesson</a> / </span>
+</h5>
+
+<h3>Оценка текущего уровня подготовки</h3>
+<p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
+<h1>Задание 6 (Анализ программного кода)</h1>
+<h3>Три разновидности программного кода в задачах ОГЭ</h3>
+<p><img alt="pic" src="./images/evich2021-book-cover.png"></p>
+<h3>Скорректированная оценка уровня подготовки</h3>
+<p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
