next-lesson-18-init-2

--- a/lesson-18.html
+++ b/lesson-18.html
@@ -31,15 +31,45 @@
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 <h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Три разновидности программного кода в задачах ОГЭ</h2>
-<h3>Условный оператор</h3>
-<h2>if ... else ...</h2>
-<p><img alt="pic" src="./images/evich2021-V02-Z06_task.png"></p>
-<h3>Конечный цикл</h3>
-<h2>for ...</h2>
-<p><img alt="pic" src="./images/evich2021-V13-Z06_task.png"></p>
-<h3>Бесконечный цикл</h3>
-<h2>while ...</h2>
-<p><img alt="pic" src="./images/evich2021-V20-Z06_task.png"></p>
+<h3>Условный оператор <strong>if ... else ...</strong></h3>
+<table>
+<thead>
+<tr>
+<th><img alt="pic" src="./images/evich2021-V02-Z06_task.png"></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td></td>
+</tr>
+</tbody>
+</table>
+<h3>Конечный цикл <strong>for ...</strong></h3>
+<table>
+<thead>
+<tr>
+<th><img alt="pic" src="./images/evich2021-V13-Z06_task.png"></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td></td>
+</tr>
+</tbody>
+</table>
+<h3>Бесконечный цикл <strong>while ...</strong></h3>
+<table>
+<thead>
+<tr>
+<th><img alt="pic" src="./images/evich2021-V20-Z06_task.png"></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td></td>
+</tr>
+</tbody>
+</table>
 <h3>Скорректированная оценка уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 
